--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script type="text/javascript" src="signatures.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
